docs/en/4.1.0/api/Notification.md
#Notification
<div class="btn-group"><a href="#Methods" class="btn"><i class="icon-cog"></i> Methods<sup>&nbsp;6</sub></a><a class="btn dropdown-toggle" data-toggle="dropdown" data-target="#" href="#Methods" >  <span class="caret"></span>&nbsp;</a><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li class="disabled"><a tabindex="-1" href="#"><b><i>Methods - Class</i></b></a><li><a href="#mbeepSTATIC" data-target="cMethodbeep" class="autouncollapse">beep</a></li><li><a href="#mhidePopupSTATIC" data-target="cMethodhidePopup" class="autouncollapse">hidePopup</a></li><li><a href="#mplayFileSTATIC" data-target="cMethodplayFile" class="autouncollapse">playFile</a></li><li><a href="#mshowPopupSTATIC" data-target="cMethodshowPopup" class="autouncollapse">showPopup</a></li><li><a href="#mshowStatusSTATIC" data-target="cMethodshowStatus" class="autouncollapse">showStatus</a></li><li><a href="#mvibrateSTATIC" data-target="cMethodvibrate" class="autouncollapse">vibrate</a></li></li></ul></div><div class="btn-group"><a href="#Examples" class="btn"><i class="icon-edit"></i> Examples<sup>&nbsp;2</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#e0" data-target="eExample0" class="autouncollapse">Sound the device beeper</a></li><li><a href="#e1" data-target="eExample1" class="autouncollapse">Show an alert</a></li></ul></div><div class="btn-group"><a href="#Remarks" class="btn"><i class="icon-warning-sign"></i> Remarks<sup>&nbsp;2</sup></a><button href="#" class="btn dropdown-toggle" data-toggle="dropdown">  <span class="caret"></span>&nbsp;</button><ul class="dropdown-menu" style="max-height: 500px;overflow: auto;"><li><a href="#r0" data-target="rRemark0" class="autouncollapse">Maximum vibrate duration</a></li><li><a href="#r1" data-target="rRemark1" class="autouncollapse">Spuriously reported hardware</a></li></ul></div><div class="btn-group pull-right"><button class="btn dropdown-toggle" id="apiFilterBtn" data-toggle="dropdown" href="#" title="Filter Properties and Methods"><i class="icon-filter "></i>Show</button><select id="apiFilter" class="dropdown-menu apiFilter"><option value="all">All</option><option value="js">Javascript</option><option value="ruby">Ruby</option><option value="android">Android</option><option value="ios">iOS</option><option value="wm">Windows Mobile</option><option value="wp8">Windows Phone 8</option><option value="w32">Windows Desktop</option><option value="msi">MSI Only</option></select></div><div  id="apibody" style="overflow:auto;padding-right: 5px;">
<p>The Notification API allows you to provide feedback to the user, either auditory, tactile or visual. Use this API to give a visual popup window, sound the device beeper or illuminate the device LEDs (hardware permitting).</p>
<h2>Enabling the API</h2>

<p>This API is part of the <code>coreapi</code> extension that is included automatically.</p>

<pre><code>:::ruby
extensions: ["coreapi"]
</code></pre>

<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript.</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby.</p>


<a name='Methods'></a>
<h2><i class='icon-cog'></i>Methods</h2>

<div class="accordion" id="accordion"><a name ='mbeepSTATIC'/><div class=' method  js ruby android' id='mbeepSTATIC'><h3><strong  >beep</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mbeepSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mbeepSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mbeepSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mbeepSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-beepSTATIC'><div class="tab-pane fade active in" id="mbeepSTATIC1"><p>If the device is equipped with a beeper then a beep will be emitted. Not supported on iOS devices.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mbeepSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>The properties associated with the beep.</p>
 </p></li><ul><li>frequency : <span class='text-info'>Integer</span><span class='label '> Default: 2000</span><p><p>The frequency of the beep, in Hz.</p>
 </p></li><li>volume : <span class='text-info'>Integer</span><span class='label '> Default: 1</span><p><p>A number between 0 and 3. 0 represents minimum volume and 3 is maximum volume, the decibels each volume level represents is device dependant.</p>
 </p></li><li>duration : <span class='text-info'>Integer</span><span class='label '> Default: 1000</span><p><p>The duration of the beep, in milliseconds.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mbeepSTATIC3"></div><div class="tab-pane fade" id="mbeepSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mbeepSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Notification.beep(<span class="text-info">HASH</span> propertyMap)</code> </li><li>Ruby: <code>Rho::Notification.beep(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li></ul></div></div></div>  </div><a name ='mhidePopupSTATIC'/><div class=' method  js ruby android ios' id='mhidePopupSTATIC'><h3><strong  >hidePopup</strong><span style='font-size:.7em;font-weight:normal;'>()</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mhidePopupSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mhidePopupSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mhidePopupSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-hidePopupSTATIC'><div class="tab-pane fade active in" id="mhidePopupSTATIC1"><p>Closes the current popup window.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mhidePopupSTATIC2"></div><div class="tab-pane fade" id="mhidePopupSTATIC3"></div><div class="tab-pane fade" id="mhidePopupSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mhidePopupSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Notification.hidePopup()</code> </li><li>Ruby: <code>Rho::Notification.hidePopup()</code></li></ul></li></ul></div></div></div>  </div><a name ='mplayFileSTATIC'/><div class=' method  js ruby android ios' id='mplayFileSTATIC'><h3><strong  >playFile</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> path, <span class="text-info">STRING</span> media_type)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mplayFileSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mplayFileSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mplayFileSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mplayFileSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-playFileSTATIC'><div class="tab-pane fade active in" id="mplayFileSTATIC1"><p>Play an audio file if that media type is supported by the device.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mplayFileSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>path : <span class='text-info'>STRING</span><p><p>The full path to the file, ending in the file name and extension.</p>
 </p></li><li>media_type : <span class='text-info'>STRING</span> <span class='label label-info'>Optional</span><span class='label '> Default: </span><p><p>Media type can be specified explicitly, or can be recognized from the file extension. The known file extensions are &ldquo;.mp3&rdquo; &ndash; &ldquo;audio/mpeg&rdquo; and &ldquo;.wav&rdquo; &ndash; &ldquo;audio/x-wav&rdquo;.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mplayFileSTATIC3"></div><div class="tab-pane fade" id="mplayFileSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mplayFileSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Notification.playFile(<span class="text-info">STRING</span> path, <span class="text-info">STRING</span> media_type)</code> </li><li>Ruby: <code>Rho::Notification.playFile(<span class="text-info">STRING</span> path, <span class="text-info">STRING</span> media_type)</code></li></ul></li></ul></div></div></div>  </div><a name ='mshowPopupSTATIC'/><div class=' method  js ruby android ios' id='mshowPopupSTATIC'><h3><strong  >showPopup</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mshowPopupSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mshowPopupSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mshowPopupSTATIC3" data-toggle="tab">Callback</a></li><li ><a href="#mshowPopupSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mshowPopupSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-showPopupSTATIC'><div class="tab-pane fade active in" id="mshowPopupSTATIC1"><p>Bring the application up front and show a message in a popup window. The message can be passed as a string or a hash. The popup window closes after you click on one of the buttons in the <code>button</code> array. Icon is not supported on iOS devices.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mshowPopupSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>The properties associated with the popup.</p>
 </p></li><ul><li>message : <span class='text-info'>String</span><span class='label '> Default: </span><p><p>Text displayed in the popup window.</p>
 </p></li><li>title : <span class='text-info'>String</span><span class='label '> Default: </span><p><p>Title of the popup window.</p>
 </p></li><li>icon : <span class='text-info'>String</span><span class='label '> Default: </span><p><p>Icon to be displayed in the popup window. path to an image, or :alert for ! icon, :question for ? icon, :info for information icon.</p>
 Platforms:Android </p></li><li>buttons : <span class='text-info'>Array</span><span class='label '> Default: </span><p><p>Array of buttons. Specify each button either by hash with :id and :title keys or string.When using strings, the <code>id</code> and <code>title</code> will have the same value.
For example:</p>

<pre><code>:::javascript
buttonHash = [{id:'yes',title:'Ok to Delete'},{id:'no',title:'No'}];
buttonString = ['Yes', 'No'];
</code></pre>

<p>NOTE: For Android, if TYPE_NOTIFICATION_DIALOG is used, every button in the notification uses an icon. By default a star icon is used. If the button id is &lsquo;accept&rsquo; then the system accept icon is used. If the button id is &lsquo;cancel&rsquo; then the system cancel icon is used.</p>
 </p></li><li>types : <span class='text-info'>Array</span><p><p>List which notification kinds will be shown. Several types may be listed at same time. <code>TYPE_NOTIFICATION</code> and <code>TYPE_NOTIFICATION_DIALOG</code> take no effect if application is in the foreground. By default <code>[Rho.Notification.TYPE_DIALOG, Rho.Notification.TYPE_NOTIFICATION]</code> is used.
Example:</p>

<pre><code>:::javascript
typeToast = [Rho.Notification.TYPE_DIALOG, Rho.Notification.TYPE_TOAST];
</code></pre>
 </p><p><strong>Possible Values</strong> :</p> <dl  ><dt>Constant: Rho::Notification.TYPE_DIALOG (For Ruby use "::" instead of ".")<br/> String:dialog</dt><dd><p>Show common dialog window with buttons visible if application is active.</p>
</dt><dt>Constant: Rho::Notification.TYPE_NOTIFICATION (For Ruby use "::" instead of ".")<br/> String:notification</dt><dd><p>Show message in Android notification bar if application is at background. Touch the message opens the application.</p>
</dt><dt>Constant: Rho::Notification.TYPE_NOTIFICATION_DIALOG (For Ruby use "::" instead of ".")<br/> String:notificationDialog</dt><dd><p>This is the same as <code>TYPE_DIALOG</code> + <code>TYPE_NOTIFICATION</code>.
NOTE: In Android 4.1 and above, buttons are also added to the notification message so the user can interact with the application without application activation (dialog window is not shown if user pressed button in notification). Buttons are not always displayed in the notification area &ndash; this depends on screen size and layout and system decides whether to show buttons. You need to drag notification to make buttons appear.</p>
</dt><dt>Constant: Rho::Notification.TYPE_TOAST (For Ruby use "::" instead of ".")<br/> String:toast</dt><dd><p>Show toast window with message at foreground for a short time. The toast is visible nevertheless the application is at background or foreground but is not shown same time with any foreground pop-up.</p>
</dt></dl></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='label label-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mshowPopupSTATIC3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>button_id : <span class='text-info'>STRING</span><p><p>ID assigned to the button when showing the popup.</p>
 </p></li><li>button_title : <span class='text-info'>STRING</span><p><p>Button text.</p>
 </p></li><li>button_index : <span class='text-info'>STRING</span><p><p>The index in the &lsquo;buttons&rsquo; array.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mshowPopupSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mshowPopupSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Notification.showPopup(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Notification.showPopup(<span class="text-info">HASH</span> propertyMap, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mshowStatusSTATIC'/><div class=' method  js ruby android ios' id='mshowStatusSTATIC'><h3><strong  >showStatus</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">STRING</span> title, <span class="text-info">STRING</span> status_text, <span class="text-info">STRING</span> hide_button_label)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mshowStatusSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mshowStatusSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mshowStatusSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mshowStatusSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-showStatusSTATIC'><div class="tab-pane fade active in" id="mshowStatusSTATIC1"><p>Display a window containing a status message. The window closes after the user clicks on its hide button. Note: Android will show a toast message for a short time in addition to a dialog window.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"><img src="/img/windows.jpg" style="width: 20px;padding-top: 8px" rel="tooltip" title="Windows Desktop"></p></div></p></div><div class="tab-pane fade" id="mshowStatusSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>title : <span class='text-info'>STRING</span> <span class='label label-info'>Optional</span><p><p>The title on the status message popup window.</p>
 </p></li><li>status_text : <span class='text-info'>STRING</span><p><p>The status message displayed in the popup status window.</p>
 </p></li><li>hide_button_label : <span class='text-info'>STRING</span><p><p>The label text for the hide button in the popup status window.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mshowStatusSTATIC3"></div><div class="tab-pane fade" id="mshowStatusSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mshowStatusSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Notification.showStatus(<span class="text-info">STRING</span> title, <span class="text-info">STRING</span> status_text, <span class="text-info">STRING</span> hide_button_label)</code> </li><li>Ruby: <code>Rho::Notification.showStatus(<span class="text-info">STRING</span> title, <span class="text-info">STRING</span> status_text, <span class="text-info">STRING</span> hide_button_label)</code></li></ul></li></ul></div></div></div>  </div><a name ='mvibrateSTATIC'/><div class=' method  js ruby android ios' id='mvibrateSTATIC'><h3><strong  >vibrate</strong><span style='font-size:.7em;font-weight:normal;'>(<span class="text-info">Integer</span> duration)</span></h3><ul class="nav nav-tabs" style="padding-left:8px"><li class='active'><a href="#mvibrateSTATIC1" data-toggle="tab">Description</a></li><li ><a href="#mvibrateSTATIC2" data-toggle="tab">Parameters</a></li><li ><a href="#mvibrateSTATIC4" data-toggle="tab">Return</a></li><li ><a href="#mvibrateSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content' style='padding-left:8px' id='tc-vibrateSTATIC'><div class="tab-pane fade active in" id="mvibrateSTATIC1"><p>Vibrate the device&rsquo;s pager hardware. Need &lsquo;vibrate&rsquo; capability set at build.yml for Android.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Javascript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mvibrateSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>duration : <span class='text-info'>Integer</span> <span class='label label-info'>Optional</span><span class='label '> Default: 1000</span><p><p>The duration of the vibration, in milliseconds. Note you may also need to add the vibration capability to your build.yml file. See remarks for maximum duration. iOS devices have fixed system vibration time. It could not be changed. Android and Windows devices have default vibration time 1000 ms.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="mvibrateSTATIC3"></div><div class="tab-pane fade" id="mvibrateSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mvibrateSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>Javascript: <code>Rho.Notification.vibrate(<span class="text-info">Integer</span> duration)</code> </li><li>Ruby: <code>Rho::Notification.vibrate(<span class="text-info">Integer</span> duration)</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Examples'></a>
<h2><i class='icon-edit'></i>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Sound the device beeper</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>Not every device is equipped with a hardware beeper but if present this code snippet will cause the beeper to sound.</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class='active'><a href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

           
# ---------------
# controller.rb  
# ---------------
         
def sound_beeper
  # Obtain list of available leds on the device. 
  beeperProps = Hash.new
  beeperProps['frequency'] = 3000;
  beeperProps['volume'] = 2;
  beeperProps['duration'] = 1500;
  Rho::Notification.beep(beeperProps)
end
                   
                 </code></pre></div></div>  </div></div></div></div><a name='e1'></a><div class=' example' id='e1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample1"><strong>Show an alert</strong></div><div id="cExample1" class="accordion-body">  <div class="accordion-inner">
<p>This example shows how to show an alert in JavaScript.</p>
<ul class='nav nav-tabs' id='exI1-S0Tab'><li class='active'><a href='#exI1-S0JS' data-toggle='tab'>Javascript</a></li></ul><div class='tab-content'><div class='tab-pane active' id='exI1-S0JS'><pre class='CodeRay'><code>:::javascript

           
function show_alert()
{
    //creates a popup with a message and two buttons
    Rho.Notification.showPopup({
        title:'My Popup',
        message:'Do you really want to delete this record',
        buttons:[
            {id:'yes',title:'Ok to Delete'},
            {id:'no',title:'No'}]
        },
            function(e){
                if(e.button_id == "yes")
                {
                    // go ahead and delete the record
                }
            }
    );
}
                   
                 </code></pre></div></div>  </div></div></div></div>
<a name='Remarks'></a>
<h2><i class='icon-warning-sign'></i>Remarks</h2>

<a name='r0'></a><div class=' remarks' id='r0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark0"><strong>Maximum vibrate duration</strong></div><div id="cRemark0" class="accordion-body">  <div class="accordion-inner"><p>On Android, the maximum duration for vibrate is 15 seconds (15000ms).</p>
  </div></div></div></div><a name='r1'></a><div class=' remarks' id='r1'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"  href="#cRemark1"><strong>Spuriously reported hardware</strong></div><div id="cRemark1" class="accordion-body">  <div class="accordion-inner"><p>Some Windows Mobile or CE devices may report hardware which is not present on the device such as a pager or LEDs. This is a limitation of the underlying driver layer reporting spurious results to the application, though all real hardware will be controllable.</p>
  </div></div></div></div></div>